# server/src/users/users.controller.ts
@@ -1,3 +1,5 @@
+import { inject, injectable } from "inversify";
+
 // src/users/usersController.ts
 import {
   Body,
@@ -12,14 +14,25 @@ import {
 import { User } from "./users.model";
 import { UsersService, UserCreationParams } from "./users.service";
 
-@Route("users")
+@Route("api/users")
+@injectable()
 export class UsersController extends Controller {
+  protected usersService: UsersService;
+
+  constructor(
+    @inject(UsersService) usersService: UsersService
+  ) {
+    super();
+
+    this.usersService = usersService;
+  }
+
   @Get("{userId}")
   public async getUser(
     @Path() userId: number,
     @Query() name?: string
   ): Promise<User> {
-    return new UsersService().get(userId, name);
+    return await this.usersService.get(userId, name);
   }
 
   @SuccessResponse("201", "Created") // Custom success response
@@ -28,7 +41,7 @@ export class UsersController extends Controller {
     @Body() requestBody: UserCreationParams
   ): Promise<void> {
     this.setStatus(201); // set return status 201
-    new UsersService().create(requestBody);
+    await this.usersService.create(requestBody);
     return;
   }
 }
